# SuperCheckers

./: CMakeLists.txt  README.md  Zasady gry.txt  todo.txt
scripts/: BinToC.py  FontsToC.ps1  ImgsToC.ps1
src/: main.cpp
src/engine/: Agent.cpp  Agent.h  Board.cpp  Board.h  DynamicArray.h  DynamicArray_impl.h  Game.cpp  Game.h  Helpers.h  Move.cpp  Move.h
src/resources/: FontResources.h  ResourcesManager.cpp  ResourcesManager.h  TGUIMenuFormPreprocess.h
src/ui/: CheckersWidget.cpp  CheckersWidget.h  GameWindow.cpp  GameWindow.h  MoveAnimation.cpp  MoveAnimation.h  ResourcesManager.cpp  ResourcesManager.h  ResultInfo.cpp  ResultInfo.h  TexturesManager.cpp  TexturesManager.h  UIConfig.cpp  UIConfig.h  UserUIAgent.cpp  UserUIAgent.h
src/ui/Animation/: Animation.cpp  Animation.h  ColorAnimation.cpp  ColorAnimation.h  MoveAnimation.cpp  MoveAnimation.h
src/ui/GameWindow/: GameWindow.cpp  GameWindow.h  WindowState.cpp  WindowState.h
src/ui/GameWindow/WindowStates/: GameWindowState.cpp  GameWindowState.h  MenuWindowState.cpp  MenuWindowState.h  ResultWindowState.cpp  ResultWindowState.h
src/utils/: Dispatcher.cpp  Dispatcher.h  FontResources.h  Helpers.cpp  Helpers.h  SfmlUtils.cpp  SfmlUtils.h  TGUIMenuFormPreprocess.h
